Feat: Switch to robust systemd-based deployment - Overhaul GitHub Actions workflow to use systemd for service management. - Delegate all start/stop/restart and port cleanup to systemd. - Add ExecStartPre to the service file to forcefully clear port 8080. - Remove all complex and unreliable shell scripting for process management. - This provides a standard, reliable, and resilient deployment mechanism.

--- a/eassist-api.service
+++ b/eassist-api.service
@@ -8,8 +8,12 @@ User=gitdeploy
 Group=gitdeploy
 WorkingDirectory=/opt/eassist-api
 EnvironmentFile=/opt/eassist-api/.env
-Environment=NODE_ENV=production
-Environment=PORT=8080
+Environment="NODE_ENV=production"
+Environment="PORT=8080"
+
+# Pre-start script to ensure port is free
+ExecStartPre=/bin/sh -c 'while sudo lsof -ti:8080 >/dev/null; do echo "Port 8080 is busy, waiting..."; sudo fuser -k 8080/tcp; sleep 2; done'
+
 ExecStart=/usr/bin/node /opt/eassist-api/src/server.js
 Restart=always
 RestartSec=3
