--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -102,273 +102,59 @@ jobs:
           ssh -o StrictHostKeyChecking=yes \
             ${{ secrets.DEPLOY_USER || 'gitdeploy' }}@${{ secrets.DEPLOY_HOST }} \
             'set -euo pipefail
-            echo "[GitHub Actions] Starting direct deployment bypass at $(date)"
-            echo "[GitHub Actions] Bypassing any local deploy scripts"
-            cd ${{ env.DEPLOY_PATH }} || { echo "[GitHub Actions] Failed to change to deploy directory"; exit 1; }
+            echo "[Deploy] Starting systemd-based deployment at $(date)"
+            cd ${{ env.DEPLOY_PATH }} || { echo "[Deploy] Failed to change to deploy directory"; exit 1; }
             
-            # Ensure we do not accidentally call the deploy script
-            export PATH="/usr/bin:/bin:/usr/local/bin:$PATH"
-            
-            echo "[GitHub Actions] Installing dependencies"
-            if ! npm ci --only=production --no-audit 2>/dev/null; then
-              echo "[GitHub Actions] npm ci failed, trying npm install"
-              npm install --only=production --no-audit || { echo "[GitHub Actions] Failed to install dependencies"; exit 1; }
+            echo "[Deploy] Installing dependencies"
+            if ! npm ci --only=production --no-audit; then
+              echo "[Deploy] npm ci failed, trying npm install"
+              npm install --only=production --no-audit || { echo "[Deploy] Failed to install dependencies"; exit 1; }
             fi
             
-            echo "[GitHub Actions] Running migrations"
-            npm run migrate:run 2>/dev/null || npm run migrate 2>/dev/null || echo "[GitHub Actions] No migrations to run or migration failed (continuing)"
+            echo "[Deploy] Running migrations"
+            npm run migrate:run 2>/dev/null || npm run migrate 2>/dev/null || echo "[Deploy] No migrations to run or migration failed (continuing)"
             
-            echo "[GitHub Actions] Starting PID-based service management"
-            PID_FILE="$HOME/.eassist-api.pid"
+            echo "[Deploy] Setting up systemd service"
+            # Copy the service file to the systemd directory
+            sudo cp ${{ env.DEPLOY_PATH }}/eassist-api.service /etc/systemd/system/eassist-api.service
             
-            # Stop service using PID file
-            if [ -f "$PID_FILE" ]; then
-              OLD_PID=$(cat "$PID_FILE" 2>/dev/null || echo "")
-              if [ -n "$OLD_PID" ] && kill -0 "$OLD_PID" 2>/dev/null; then
-                echo "[GitHub Actions] Stopping existing service with PID: $OLD_PID"
-                kill -TERM "$OLD_PID" 2>/dev/null || true
-                sleep 3
-                # Force kill if still running
-                if kill -0 "$OLD_PID" 2>/dev/null; then
-                  echo "[GitHub Actions] Force killing process: $OLD_PID"
-                  kill -9 "$OLD_PID" 2>/dev/null || true
-                fi
-              fi
-              rm -f "$PID_FILE"
-            fi
+            # Reload systemd to recognize the new service file
+            sudo systemctl daemon-reload
             
-            # Additional cleanup - kill any remaining processes
-            echo "[GitHub Actions] Cleaning up any remaining processes"
-            # Temporarily disable strict error handling for cleanup
-            set +e
+            # Enable the service to start on boot
+            sudo systemctl enable eassist-api.service
             
-            if command -v pgrep >/dev/null 2>&1; then
-              # Kill node processes running server.js
-              NODE_PIDS=$(pgrep -f "node.*server.js" 2>/dev/null || true)
-              if [ -n "$NODE_PIDS" ]; then
-                echo "[GitHub Actions] Found node processes: $NODE_PIDS"
-                echo "$NODE_PIDS" | while IFS= read -r pid; do
-                  if [ -n "$pid" ] && [ "$pid" -gt 0 ] 2>/dev/null; then
-                    echo "[GitHub Actions] Attempting to kill node process: $pid"
-                    (kill -TERM "$pid" 2>/dev/null && echo "[GitHub Actions] Sent TERM to $pid") || echo "[GitHub Actions] Could not send TERM to $pid (may not exist)"
-                  fi
-                done
-                
-                # Wait a moment for graceful termination
-                sleep 3
-                
-                # Force kill any remaining processes - use subshell to prevent exit on error
-                echo "$NODE_PIDS" | while IFS= read -r pid; do
-                  if [ -n "$pid" ] && [ "$pid" -gt 0 ] 2>/dev/null; then
-                    if kill -0 "$pid" 2>/dev/null; then
-                      echo "[GitHub Actions] Force killing stubborn node process: $pid"
-                      (kill -9 "$pid" 2>/dev/null && echo "[GitHub Actions] Force killed $pid") || echo "[GitHub Actions] Could not force kill $pid"
-                    fi
-                  fi
-                done
-              else
-                echo "[GitHub Actions] No node server processes found"
-              fi
-              
-              # Kill npm start processes
-              NPM_PIDS=$(pgrep -f "npm.*start" 2>/dev/null || true)
-              if [ -n "$NPM_PIDS" ]; then
-                echo "[GitHub Actions] Found npm processes: $NPM_PIDS"
-                echo "$NPM_PIDS" | while IFS= read -r pid; do
-                  if [ -n "$pid" ] && [ "$pid" -gt 0 ] 2>/dev/null; then
-                    echo "[GitHub Actions] Attempting to kill npm process: $pid"
-                    (kill -TERM "$pid" 2>/dev/null && echo "[GitHub Actions] Sent TERM to npm $pid") || echo "[GitHub Actions] Could not send TERM to npm $pid"
-                  fi
-                done
-                
-                sleep 2
-                
-                # Force kill any remaining npm processes
-                echo "$NPM_PIDS" | while IFS= read -r pid; do
-                  if [ -n "$pid" ] && [ "$pid" -gt 0 ] 2>/dev/null; then
-                    if kill -0 "$pid" 2>/dev/null; then
-                      echo "[GitHub Actions] Force killing stubborn npm process: $pid"
-                      (kill -9 "$pid" 2>/dev/null && echo "[GitHub Actions] Force killed npm $pid") || echo "[GitHub Actions] Could not force kill npm $pid"
-                    fi
-                  fi
-                done
-              else
-                echo "[GitHub Actions] No npm start processes found"
-              fi
-            else
-              echo "[GitHub Actions] pgrep command not available, skipping process cleanup"
-            fi
+            echo "[Deploy] Restarting eassist-api service"
+            # The ExecStartPre in the service file will handle port cleanup
+            sudo systemctl restart eassist-api.service
             
-            # Ensure we continue regardless of cleanup results
-            echo "[GitHub Actions] Process cleanup completed (continuing deployment)"
+            echo "[Deploy] Waiting for service to become active..."
+            sleep 5 # Give it a moment to start
             
-            # --- begin sudo-free 8080 cleanup ---
-            echo "[GitHub Actions] Sudo-free port 8080 cleanup (no elevated privileges)"
-            
-            # First check what we can see without sudo
-            if command -v ss >/dev/null 2>&1; then
-              echo "[GitHub Actions] Checking port 8080 with user permissions:"
-              ss -tlnp 2>/dev/null | grep :8080 || echo "[GitHub Actions] No visible processes using port 8080"
-            elif command -v lsof >/dev/null 2>&1; then
-              echo "[GitHub Actions] Checking port 8080 with lsof:"
-              lsof -i:8080 2>/dev/null || echo "[GitHub Actions] No visible processes using port 8080"
-            fi
-            
-            # Kill any processes we can see and control
-            if command -v lsof >/dev/null 2>&1; then
-              USER_PIDS=$(lsof -ti:8080 2>/dev/null | while read pid; do
-                if [ -n "$pid" ] && ps -p "$pid" -o user= 2>/dev/null | grep -q "^$(whoami)$"; then
-                  echo "$pid"
-                fi
-              done)
-              
-              if [ -n "$USER_PIDS" ]; then
-                echo "[GitHub Actions] Killing user-owned processes on port 8080: $USER_PIDS"
-                for pid in $USER_PIDS; do
-                  if [ -n "$pid" ]; then
-                    echo "[GitHub Actions] Killing PID: $pid"
-                    kill -9 "$pid" 2>/dev/null || echo "[GitHub Actions] Could not kill $pid"
-                  fi
-                done
-                sleep 2
-              fi
-            fi
-            
-            # Alternative strategy: Use a different port if 8080 is still busy
-            sleep 2
-            ALTERNATIVE_PORT=8081
-            
-            if command -v nc >/dev/null 2>&1; then
-              if nc -z localhost 8080 2>/dev/null; then
-                echo "[GitHub Actions] WARNING: Port 8080 still appears busy, trying alternative approach"
-                echo "[GitHub Actions] Checking if we can use alternative port $ALTERNATIVE_PORT"
-                
-                if ! nc -z localhost $ALTERNATIVE_PORT 2>/dev/null; then
-                  echo "[GitHub Actions] Port $ALTERNATIVE_PORT is free, will use as alternative"
-                  # Update PORT in .env temporarily
-                  if [ -f .env ]; then
-                    sed -i.bak "s/^PORT=.*/PORT=$ALTERNATIVE_PORT/" .env 2>/dev/null || {
-                      echo "PORT=$ALTERNATIVE_PORT" >> .env
-                    }
-                  else
-                    echo "PORT=$ALTERNATIVE_PORT" > .env
-                  fi
-                  echo "[GitHub Actions] Temporarily using port $ALTERNATIVE_PORT instead of 8080"
-                else
-                  echo "[GitHub Actions] ERROR: Both ports 8080 and $ALTERNATIVE_PORT appear to be in use"
-                  # Last resort: try to find any available port
-                  for try_port in 8082 8083 8084 8085 3000 3001 9000 9001; do
-                    if ! nc -z localhost $try_port 2>/dev/null; then
-                      echo "[GitHub Actions] Found available port $try_port, using as emergency fallback"
-                      if [ -f .env ]; then
-                        sed -i.bak "s/^PORT=.*/PORT=$try_port/" .env 2>/dev/null || {
-                          echo "PORT=$try_port" >> .env
-                        }
-                      else
-                        echo "PORT=$try_port" > .env
-                      fi
-                      ALTERNATIVE_PORT=$try_port
-                      break
-                    fi
-                  done
-                fi
-              else
-                echo "[GitHub Actions] Port 8080 appears to be free after cleanup"
-                # Ensure .env has PORT=8080
-                if [ -f .env ]; then
-                  if grep -q "^PORT=" .env; then
-                    sed -i.bak "s/^PORT=.*/PORT=8080/" .env 2>/dev/null
-                  else
-                    echo "PORT=8080" >> .env
-                  fi
-                else
-                  echo "PORT=8080" > .env
-                fi
-              fi
-            fi
-            
-            # Final verification
-            echo "[GitHub Actions] Final port verification before starting service"
-            FINAL_PORT=$(grep "^PORT=" .env 2>/dev/null | cut -d= -f2 || echo "8080")
-            echo "[GitHub Actions] Will start service on port: $FINAL_PORT"
-            
-            # Wait a bit more to ensure port is released
-            sleep 3
-            # --- end sudo-free 8080 cleanup ---
-            
-            set -euo pipefail  # Re-enable strict error handling
-            
-            echo "[GitHub Actions] Process cleanup completed"
-            
-            echo "[GitHub Actions] Starting new service without systemd"
-            # Create log directory
-            LOG_DIR="$HOME/logs"
-            mkdir -p "$LOG_DIR" 2>/dev/null || LOG_DIR="/tmp"
-            LOG_FILE="$LOG_DIR/eassist-api.log"
-            
-            # Get the port from .env (it might have been changed to an alternative port)
-            FINAL_PORT=$(grep "^PORT=" .env 2>/dev/null | cut -d= -f2 || echo "8080")
-            echo "[GitHub Actions] Starting service on port: $FINAL_PORT"
-            
-            # Start the service in background with the correct port
-            cd ${{ env.DEPLOY_PATH }}
-            NODE_ENV=production PORT="$FINAL_PORT" nohup npm start >"$LOG_FILE" 2>&1 &
-            NEW_PID=$!
-            
-            # Save PID for future deployments
-            echo $NEW_PID > "$PID_FILE"
-            echo "[GitHub Actions] Started service with PID: $NEW_PID on port $FINAL_PORT"
-            echo "[GitHub Actions] Log file: $LOG_FILE"
-            
-            # Wait and verify service started
-            sleep 5
-            if ! kill -0 "$NEW_PID" 2>/dev/null; then
-              echo "[GitHub Actions] ERROR: Service failed to start"
-              echo "[GitHub Actions] Recent logs:"
-              tail -20 "$LOG_FILE" 2>/dev/null || echo "No logs available"
+            # Check the service status
+            if ! sudo systemctl is-active --quiet eassist-api.service; then
+              echo "[Deploy] ERROR: Service failed to start."
+              echo "[Deploy] Displaying service status and recent logs:"
+              sudo systemctl status --no-pager -l eassist-api.service || true
+              sudo journalctl -u eassist-api.service -n 50 --no-pager || true
               exit 1
             fi
             
-            # Verify service is listening on the correct port
-            echo "[GitHub Actions] Verifying service is ready on port $FINAL_PORT"
-            READY=0
-            for attempt in $(seq 1 30); do
-              if command -v nc >/dev/null 2>&1 && nc -z localhost "$FINAL_PORT" 2>/dev/null; then
-                echo "[GitHub Actions] ✅ Service is responding on port $FINAL_PORT"
-                READY=1
-                break
-              elif command -v lsof >/dev/null 2>&1 && lsof -ti:"$FINAL_PORT" >/dev/null 2>&1; then
-                echo "[GitHub Actions] ✅ Service is listening on port $FINAL_PORT"
-                READY=1
-                break
+            echo "[Deploy] ✅ Service is active. Verifying it is listening on port 8080."
+            # Final verification loop
+            for i in $(seq 1 15); do
+              if sudo ss -ltn | grep -q ":8080 "; then
+                echo "[Deploy] ✅ Service is listening on port 8080."
+                sudo systemctl status --no-pager -l eassist-api.service
+                echo "[Deploy] ✅ Deployment successful!"
+                exit 0
               fi
-              
-              # Check if process is still alive
-              if ! kill -0 "$NEW_PID" 2>/dev/null; then
-                echo "[GitHub Actions] ERROR: Service process died during startup"
-                tail -30 "$LOG_FILE" 2>/dev/null || echo "No logs available"
-                exit 1
-              fi
-              
-              echo "[GitHub Actions] Waiting for service... ($attempt/30)"
+              echo "[Deploy] Waiting for port 8080 to become active... (attempt $i/15)"
               sleep 2
             done
             
-            if [ $READY -eq 1 ]; then
-              echo "[GitHub Actions] ✅ Deployment successful at $(date)"
-              echo "[GitHub Actions] Service PID: $NEW_PID"
-              echo "[GitHub Actions] Service Port: $FINAL_PORT"
-              echo "[GitHub Actions] PID file: $PID_FILE"
-              echo "[GitHub Actions] Log file: $LOG_FILE"
-              if [ "$FINAL_PORT" != "8080" ]; then
-                echo "[GitHub Actions] WARNING: Service is running on port $FINAL_PORT instead of 8080 due to port conflict"
-                echo "[GitHub Actions] You may need to update your reverse proxy/load balancer configuration"
-              fi
-            else
-              echo "[GitHub Actions] ❌ Service startup timeout"
-              echo "[GitHub Actions] Process info:"
-              ps aux | grep "$NEW_PID" 2>/dev/null || echo "Process not found"
-              echo "[GitHub Actions] Recent logs:"
-              tail -50 "$LOG_FILE" 2>/dev/null || echo "No logs available"
-              exit 1
-            fi'
+            echo "[Deploy] ❌ ERROR: Service started but is not listening on port 8080."
+            sudo systemctl status --no-pager -l eassist-api.service || true
+            sudo journalctl -u eassist-api.service -n 50 --no-pager || true
+            exit 1
+            '
