--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "generate:openapi": "node scripts/generate-openapi.js",
     "bootstrap:admin": "npm run seed:permissions-and-superuser",
     "migrate:prep-local": "node scripts/generate-permissions-sql.js",
-    "generate:api-docs": "node scripts/generate-openapi.js && node scripts/generate-readme-api.js"
+    "generate:api-docs": "node scripts/generate-openapi.js && node scripts/generate-readme-api.js",
+    "seed:sources": "node scripts/seed-sources.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
