--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "bootstrap:admin": "npm run seed:permissions-and-superuser",
     "migrate:prep-local": "node scripts/generate-permissions-sql.js",
     "generate:api-docs": "node scripts/generate-openapi.js && node scripts/generate-readme-api.js",
-    "seed:sources": "node scripts/seed-sources.js"
+    "seed:sources": "node scripts/seed-sources.js",
+    "test": "NODE_ENV=test JWT_SECRET=testsecret MESSAGES_SEND_PER_MIN=1 node --test test/*.test.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -43,6 +44,8 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "supertest": "^7.0.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
